Labor feat (#36)
* Add electricity rate module and related features

* mapper fixed reports @LaborReports and Migration for electricity_rates added

* Production (#33)

* update Quotation and Order module get all details in order response

* update payment module

* update payment module email service

* Add API end points for OrderItem

* feat(scrap): Implement scrap entry and item repositories, service, and database migrations

- Added ScrapEntryRepository and ScrapItemRepository for managing scrap entries and items.
- Created ScrapService to handle business logic for scrap entries, including creation, verification, and approval processes.
- Updated application configuration for database connection.
- Added SQL migrations to create and modify tables for scrap entries, items, and related quality inspections.
- Extended existing tables to integrate with QA processes, including adding audit columns and linking production items to heat orders.
- Seeded QA defect catalog with common defects for quality assurance tracking.

* Refactor code structure for improved readability and maintainability

* feat(labor): Enhance Laborer management with validation and update functionality
docs(QA): Update QA documentation for inspection processes and future integrations
build: Upgrade Spring Boot version to 4.0.5
config: Disable SpringDoc API documentation in production

* Production (#35)

* Build GST Reports

* change gst module .sql file name

* mapper fixed reports @LaborReports and Migration for electricity_rates added

* Production (#33)

* update Quotation and Order module get all details in order response

* update payment module

* update payment module email service

* Add API end points for OrderItem

* feat(order): Enhance OrderMapper with additional mappings for response transformation

* feat: Implement Purchase Invoice Management

- Created PurchaseInvoiceService to handle creation, updating, linking, and retrieval of purchase invoices.
- Added endpoints in PurchaseOr